--- a/app/views/users/_users.html.erb
+++ b/app/views/users/_users.html.erb
@@ -1,14 +1,14 @@
 <% if users.any? %>
-  <ul class='list-unstyled'>
+  <ul class="list-unstyled">
     <% users.each do |user| %>
-      <li class='media'>
-        <img class='mr-2 rounded' src='<%= gravatar_url(user, { size: 50 }) %>' alt=''>
-        <div class='media-body'>
+      <li class="media">
+        <img class="mr-2 rounded" src="<%= gravatar_url(user, { size: 50 }) %>" alt="">
+        <div class="media-body">
           <div>
             <%= user.name %>
           </div>
           <div>
-            <p><%= link_to 'view profile', user_path(user) %></p>
+            <p><%= link_to 'View profile', user_path(user) %></p>
           </div>
         </div>
       </li>
