--- a/app/views/microposts/_microposts.html.erb
+++ b/app/views/microposts/_microposts.html.erb
@@ -9,10 +9,11 @@
         <div>
           <p class='mb-0'><%= micropost.content %></p>
         </div>
-        <div>
+        <div class='btn-group'>
           <% if current_user == micropost.user %>
             <%= link_to 'Delete', micropost, method: :delete, data: { confirm: 'you sure' }, class: 'btn btn-danger btn-sm' %>
-            <% end %>
+          <% end %>
+          <%= render 'favorites/favorite_button', micropost: micropost%>
         </div>
       </div>
     </li>
